Updated docs for withMissingScannerResults attribute

--- a/index.html
+++ b/index.html
@@ -380,17 +380,18 @@
 <pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
     </span><span class="s2">"url"</span><span class="p">:</span><span class="w"> </span><span class="s2">"http:</span><span class="se">\/\/</span><span class="s2">www.siwecos.de"</span><span class="p">,</span><span class="w">
     </span><span class="s2">"dangerLevel"</span><span class="p">:</span><span class="w"> </span><span class="mi">10</span><span class="p">,</span><span class="w">
-    </span><span class="s2">"started_at"</span><span class="p">:</span><span class="w"> </span><span class="s2">"2019-05-09 07:05:38"</span><span class="p">,</span><span class="w">
-    </span><span class="s2">"finished_at"</span><span class="p">:</span><span class="w"> </span><span class="s2">"2019-05-09 07:05:55"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"startedAt"</span><span class="p">:</span><span class="w"> </span><span class="s2">"2019-05-09 07:05:38"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"finishedAt"</span><span class="p">:</span><span class="w"> </span><span class="s2">"2019-05-09 07:05:55"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"withMissingScannerResults"</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="s2">"INI_S"</span><span class="p">,</span><span class="w"> </span><span class="s2">"INFOLEAK"</span><span class="p">],</span><span class="w">
     </span><span class="s2">"results"</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="w">
         </span><span class="p">{</span><span class="w">
-          </span><span class="s2">"started_at"</span><span class="p">:</span><span class="w"> </span><span class="s2">"2019-05-09 07:05:38"</span><span class="p">,</span><span class="w">
-          </span><span class="s2">"finished_at"</span><span class="p">:</span><span class="w"> </span><span class="s2">"2019-05-09 07:05:40"</span><span class="p">,</span><span class="w">
+          </span><span class="s2">"startedAt"</span><span class="p">:</span><span class="w"> </span><span class="s2">"2019-05-09 07:05:38"</span><span class="p">,</span><span class="w">
+          </span><span class="s2">"finishedAt"</span><span class="p">:</span><span class="w"> </span><span class="s2">"2019-05-09 07:05:40"</span><span class="p">,</span><span class="w">
           </span><span class="err">//</span><span class="w"> </span><span class="err">Scanner</span><span class="w"> </span><span class="mi">1</span><span class="w"> </span><span class="err">results</span><span class="w">
         </span><span class="p">},</span><span class="w">
         </span><span class="p">{</span><span class="w">
-          </span><span class="s2">"started_at"</span><span class="p">:</span><span class="w"> </span><span class="s2">"2019-05-09 07:05:41"</span><span class="p">,</span><span class="w">
-          </span><span class="s2">"finished_at"</span><span class="p">:</span><span class="w"> </span><span class="s2">"2019-05-09 07:05:52"</span><span class="p">,</span><span class="w">
+          </span><span class="s2">"startedAt"</span><span class="p">:</span><span class="w"> </span><span class="s2">"2019-05-09 07:05:41"</span><span class="p">,</span><span class="w">
+          </span><span class="s2">"finishedAt"</span><span class="p">:</span><span class="w"> </span><span class="s2">"2019-05-09 07:05:52"</span><span class="p">,</span><span class="w">
           </span><span class="err">//</span><span class="w"> </span><span class="err">Scanner</span><span class="w"> </span><span class="mi">2</span><span class="w"> </span><span class="err">results</span><span class="w">
         </span><span class="p">},</span><span class="w">
         </span><span class="err">...</span><span class="w">
@@ -399,6 +400,13 @@
 
 </span></code></pre>
 <p>The result that will be send to the callbackurls has the following structure.</p>
+
+<p><br><br></p>
+
+<p><strong>NB:</strong> <br>
+The <code>withMissingScannerResults</code> array will only be sent if there were conflicts in the Core-API so no result was delivered by the particular scanner.</p>
+
+<p><br><br><br></p>
 
 <p>For further information regarding the results please check the related scanner repo and the <a href="https://github.com/SIWECOS/siwecos-core-api/tree/develop#scanner-interface-documentation">Scanner Interface Documentation</a>.</p>
 <h1 id='log-messages'>Log Messages</h1>
